@@ -7,7 +7,6 @@ use App::Doh::Functions    qw( load_components );
 use Class::Usul::Constants qw( TRUE );
 use Encode                 qw( encode );
 use File::DataClass::Types qw( HashRef Object );
-use Module::Pluggable::Object;
 
 with q(App::Doh::Role::Component);
 with q(App::Doh::Role::Templates);
@@ -16,7 +15,8 @@ with q(App::Doh::Role::Templates);
 has '+moniker'   => default => 'html';
 
 has 'formatters' => is => 'lazy', isa => HashRef[Object], builder => sub {
-   load_components 'View::HTML', { builder => $_[ 0 ]->usul, } };
+   load_components 'View::HTML', $_[ 0 ]->usul->config,
+      { builder => $_[ 0 ]->usul, } };
 
 has 'type_map' => is => 'lazy', isa => HashRef, builder => sub {
    my $self = shift; my $map = { htm => 'html', html => 'html' };
